# pcsc-test

./: CMakeLists.txt
src/: main.cpp
